SPRINT Init
